--- a/templates/song/show.html
+++ b/templates/song/show.html
@@ -4,9 +4,11 @@
 <div>
     <ul>
         {% for song in results %}
-            <li>{{song.name}} : {{song.artist_name}} 
+            <li>{{song.song_name}} : {{song.artist_name}} 
+                <div class="video-container">
                 <iframe width="420" height="345" src="https://www.youtube.com/embed/{{song.video}}">
                 </iframe>
+                </div>
             </li>   
         {% endfor %}
         
