-added song to playlist

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,14 @@
 
     {% extends "base.html" %} {% block content%}
         <h1>{{heading}}!!</h1>
-        <form action="/song" method ="post">
-            <label for="name">Song Name</label>
+        
+            <!-- <label for="name">Song Name</label>
             <input type ="text" name="name" id="name"/>
             <label for="artist">Artist Name</label>
             <input type="artist" name="artist" id="artist"/>
             <label for="genre">Genre</label>
-            <input type="text" name="genre" id="genre">
-            <input type="submit" value="Add Song"/>
+            <input type="text" name="genre" id="genre"> -->
+            
         </form>
             <ul>{% for song in playlist %}
             <div class="flex-container"><p>
