--- a/static/main.css
+++ b/static/main.css
@@ -1,18 +1,12 @@
 
 .flex-container li{
-    display: flex;
-    flex: 100px;
-    flex-direction: column;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    height: 400px;
+    align-content: space-around;
     box-shadow: 0 rgba(61, 58, 58, 0.2);
-    /* transition: 0.3s; */
-    /* flex-basis: 0;
-    flex-grow: 1;  */
-    padding: 20px;
-    margin: 0 auto;
     background-color: rgb(239, 235, 240);
-    flex-grow: 0;
-    align-items: flex-start;
+
    
 }
 
