--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,10 @@
                         <iframe width="420" height="345" src="{{song.video}}">
                         </iframe>
                         </div>
+                        <form class="delete-form" action="/playlist/{{song.song_name}}/delete" method="POST">
+                        <button type="submit" class="trash-button"><i class="fa fa-trash-o fa-3x" style="color:red" aria-hidden="true">
+                        </i></button>
+                        </form>
                     </b> 
                 <!-- <span> &#9989;</span></li> -->
                 </li>
