--- a/static/main.css
+++ b/static/main.css
@@ -1,26 +1,42 @@
 
-.flex-container li{
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    height: 400px;
-    align-content: space-around;
-    box-shadow: 0 rgba(61, 58, 58, 0.2);
-    background-color: rgb(239, 235, 240);
+.nav-bar{
+    
+        padding: 10px;
+        @media (min-width: 600px){
+            padding: 20px;
+        
+    }}
 
-   
+.search-button{
+    padding: 20px;
+
 }
 
-/* .flex-container:hover{
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
-} */
+.main-container{
+    background-image:url("image/pexels-anton-h-145707.jpeg");
+    background-color: #cccccc;
+    opacity: 80%;
+    display: grid;
+    padding: 30px;
+    
+}
+.title-item {
+    display: grid;
+    width: fit-content;
+    background-color: #cccccc;
+    padding:20px;
+    margin: 20px;
+}
 
+.home-nav{
+    padding-left:15px;
+}
 
 .video-container:hover {
   
-  animation: shake 0.5s infinite;
-
-    
+  animation: shake 0.5s infinite;   
 }
+
 @keyframes shake {
   0%, 100% {
     transform: translateX(0);
@@ -34,10 +50,15 @@
 }
 
 
-/* .video-container:hover{
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
-} */
-
 iframe{
     width: 50%;
 }
+
+.flex-container{
+    display: grid;
+    align-items: flex-start;
+}
+
+*:before, *:after {
+    box-sizing: border-box;
+  }
